Infrastructure/Kubernetes/Lab.RateMyBeer.Frontend.Api/base/ingress-frontendapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ratemybeer-frontend-api
  labels:
    name: lab-ratemybeer-frontend-api
    
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  - host: ratemybeer.westeurope.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: /api(/|$)(.*)
        backend:
          service:
            name: lab-ratemybeer-frontend-api
            port: 
              number: 80
